src/app/layout.module.css
.mainLayout {
  display: flex;
  overflow: unset;
  background-image: url("../assets/images/mainLayoutBG.png");
  background-color: #060b26;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  height: 100dvh;
}

.sideBar {
  width: 270px;
  margin: 10px;
  margin-right: 0;
  background: var(--secondry-bg);
  border-right: 1px var(--divider) solid;
  overflow: hidden;
}

.sideBar,
.sideBarOpen {
  flex-shrink: 0;
}

.contentNavBar {
  width: 100%;
}

.outlet {
  padding: 15px;
  max-width: 1440px;
  margin-inline: auto;
}

@media screen and (max-width: 768px) {
  .mainLayout {
    display: block;
    min-height: 100dvh;
  }

  .sideBar {
    transition: all 0.25s ease;
    opacity: 0;
    transform: translateX(-100%);
  }

  .outlet {
    padding-inline: 10px;
  }

  .sideBar,
  .sideBarOpen {
    z-index: 999;
    position: fixed;
  }

  .sideBarOpen {
    width: 250px;
    opacity: 1;
    transform: translateX(0%);
    transition: all 0.25s ease;
  }
}

